created aria attributes for better description

--- a/index.html
+++ b/index.html
@@ -37,28 +37,28 @@
         <h3>Joel</h3>
         <img src="images/joel-512x512.webp" alt="close up of Joel looking away into the distance" />
         <p>A hardened survivor, tormented by past trauma and failure, who must trek across a pandemic-ravaged America, all the while protecting a girl who represents the last hope of humanity.</p>
-        <a href="#">Read more</a>
+        <a href="#" aria-label="Read more about Joel character on his journey across America and what struggles he goes through along the journey">Read more</a>
       </article>
 
       <article>
         <h4>Ellie</h4>
         <img src="images/ellie-512x512.webp" alt="Ellie looking into camera with light shining from above" />
         <p>A 14-year old orphan who has never known anything but a ravaged planet, struggles to balance her instinct for anger and defiance with her need for connection and belonging… as well as the newfound reality that she may be the key to saving the world.</p>
-        <a href="#">Read more</a>
+        <a href="#" aria-label="Read more about Ellie character and learn about her struggles, balance of emotion, and dealing with her reality of being the key to saving the world">Read more</a>
       </article>
 
       <article>
         <h5>Marlene</h5>
         <img src="images/marlene-512x512.webp" alt="Marlene in dark lighting showing side profile" />
         <p>Leader of the Fireflies, a resistance movement struggling for freedom against an oppressive military regime. (Dandridge voiced the Marlene character in “The Last of Us” and “The Last of Us Part II” video games.)</p>
-        <a href="#">Read more</a>
+        <a href="#" aria-label="Read more about Marlene character and learn about her leadership style within her military group">Read more</a>
       </article>  
 
       <article>
           <h6>Tommy</h6>
           <img src="images/tommy-512x512.webp" alt="Tommy holding rifle and examining surroundings" />
           <p>Joel’s younger brother, a former soldier who hasn’t lost his sense of idealism and hope for a better world.</p>
-          <a href="#">Read more</a>
+          <a href="#" aria-label="Read more and learn about Tommy character fighting to keep his natural idealism and hope">Read more</a>
       </article>
 
     </section>
