created skip links for the nav and main content

--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
+  <ul>
+    <li><a href="#nav">Navigation</a></li>
+    <li><a href="#main">Main Content</a></li>
+  </ul>
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,7 +14,7 @@
   <header role="banner">
     <img src="images/hbo-logo.svg" width="200">
 
-    <nav role="navigation">
+    <nav id="nav" role="navigation">
       <ul>
         <li><a href="#">About the Show</a></li>
         <li><a href="#">Featured Characters</a></li>
@@ -18,7 +22,7 @@
     </nav>
   </header>
 
-  <main role="main">
+  <main id="main" role="main">
     <section>
         <img src="images/the-last-of-us.jpeg" alt="Two main characters of the Last of Us" width="800"/>
         
