--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
 
     <nav id="nav" role="navigation">
       <ul>
-        <li><a href="#">About the Show</a></li>
-        <li><a href="#">Featured Characters</a></li>
+        <li><a href="#about">About the Show</a></li>
+        <li><a href="#featured">Featured Characters</a></li>
       </ul>
     </nav>
   </header>
 
   <main id="main" role="main">
-    <section>
+    <section id="about">
         <img src="images/the-last-of-us.jpeg" alt="Two main characters of the Last of Us" width="800"/>
         
         <h1>The Last of Us</h1>
@@ -33,7 +33,7 @@
         <p>A series based on the critically acclaimed video game -- and starring Pedro Pascal and Bella Ramsey, among others -- is available now on HBO and HBO Max.</p>
     </section>
 
-    <section>
+    <section id="featured">
 
       <h2>Featured characters</h2>
 
